# Petro_Station

./: README.md  pyproject.toml
.github/workflows/: ci.yml
petro_station_app/: hooks.py  modules.txt
petro_station_app/custom_api/: all_todays_banking.py  api.py  bank_deposits.py  dipping_levels.py  get_item_price.py  invoice.py  invoice_stock.py  meter_reading.py  meter_reading_stock_entry.py  purchase_management.py  stock_transfer.py  submit_invoice.py  update_item_price.py  vehicle_number.py
petro_station_app/custom_api/cards/: custom_serie.py
petro_station_app/custom_api/statement/: fetch_order_numbers.py  statement.py
petro_station_app/custom_api/stock_dipping_levels/: stock_reconsilation.py  stock_trafers_draft.py  submit_vouchers.py
petro_station_app/fixtures/: client_script.json  custom_field.json  print_format.json  workflow.json
petro_station_app/petro_station_app/custom/: pump_meter_reading.json
petro_station_app/petro_station_app/doctype/bank_deposit_items/: bank_deposit_items.json  bank_deposit_items.py
petro_station_app/petro_station_app/doctype/bank_deposits/: bank_deposits.js  bank_deposits.json  bank_deposits.py  test_bank_deposits.py
petro_station_app/petro_station_app/doctype/cash_transfers/: cash_transfers.json  cash_transfers.py
petro_station_app/petro_station_app/doctype/credit_sales_app/: credit_sales_app.js  credit_sales_app.json  credit_sales_app.py  test_credit_sales_app.py
petro_station_app/petro_station_app/doctype/dipping_items/: dipping_items.json  dipping_items.py
(+117 files in other folders)
